--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
   <head>
     <title>Giphy API Code Along</title>
-    <script src = "script.js"></script>
-    <link href = "https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel = "stylesheet">
+   <link href = "https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel = "stylesheet">
     <link href = "index.css" rel = "stylesheet" type = "text/css">
   </head>
   
@@ -15,6 +14,7 @@
     </div>
   </div>
   </div>
-</body>
+  <script src = "index.js"></script>
+ </body>
    
   </html>
